--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.1",
+    "html-react-parser": "^5.2.2",
     "https-browserify": "^1.0.0",
     "mastodon-api": "^1.3.0",
     "net": "^1.0.2",
